--- a/debian.master/changelog
+++ b/debian.master/changelog
@@ -4,6 +4,30 @@ linux (4.6.0-0.1) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Upstream Kernel Changes ]
+
+  * rebase to v4.6-rc5
+    - LP: #1564712
+    - LP: #1555912
+    - LP: #1552925
+    - LP: #1546694
+    - LP: #1549660
+    - LP: #1549620
+    - LP: #1542944
+    - LP: #1542564
+    - LP: #1533009
+    - LP: #1533461
+    - LP: #1529624
+    - LP: #1522949
+
+  [ Upstream Kernel Changes ]
+
+  * rebase to v4.6-rc5
+
+  [ Upstream Kernel Changes ]
+
+  * rebase to v4.6-rc5
+
  -- Tim Gardner <tim.gardner@canonical.com>  Mon, 25 Apr 2016 14:24:45 -0600
 
 linux (4.6.0-0.0) xenial; urgency=low
